# python-fast-api

./: .env.example  .isort.cfg  LICENSE  README.md  README.md.rej  alembic.ini  gunicorn.conf.py  pyproject.toml  server.py
.junie/: guidelines.md
src/: api.py
src/app/auth/controller/: auth_controller.py
src/app/auth/controller/model/: dto.py
src/app/auth/dto/: bearer.py  confirm_user.py  login.py  re_send_confirm_email.py  sign_up.py
src/app/auth/model/: dto.py
src/app/auth/service/: auth_service.py
src/app/user/controller/: user_controller.py
src/app/user/data/: user_status.py
src/app/user/dto/: user.py
src/app/user/model/: dto.py  user.py
src/app/user/models/: user.py
src/app/user/repository/: user_repository.py
src/app/user/service/: user_service.py
src/app/user_notification/controller/: user_notification_controller.py
src/app/user_notification/data/: user_notification_status.py
src/app/user_notification/dto/: user_notification.py
src/app/user_notification/model/: user_notification.py
src/app/user_notification/repository/: user_notification_repository.py
src/app/user_notification/service/: user_notification_service.py  ws_notification_service.py
src/app/ws/route/: ws_controller.py
src/app/ws/service/: ws_handler.py  ws_service.py
src/cmd/: cli_command_base.py  email_worker.py
src/cmd/worker/email/: email_action.py  send_email.py
src/core/db/: asmysql.py  entity.py  repository.py
src/core/db/decorator/: int_enum.py
src/core/di/: container.py
src/core/dto/: dto.py
src/core/dto/validator/: jwt_token.py
src/core/enum/: env.py  state.py
src/core/exception/: error_no.py  exceptions.py
src/core/http/: controller.py  controller_manager.py
src/core/http/middleware/: auth_bearer.py  body_save.py  json_api.py  logging.py  x_api_key_auth.py
src/core/http/request/: request.py  state.py
src/core/http/response/: api_response_service.py  json_api.py  response.py
src/core/log/: colorize.py  log.py
src/core/log/adapter/: log_adapter.py
src/core/log/filter/: loki_filter.py
src/core/log/formatter/: console.py  loki.py
src/core/rabbit_mq/: config.py  consumer.py  data.py  message_handler.py  producer.py  rmq_service.py  worker.py
src/core/service/: functions.py  hash.py  hash_service.py  statistics.py
src/core/service/dto/: token.py
src/core/service/email/: app_mail_service.py  email.py  email_service.py  view_service.py
src/core/service/email/templates/email/: confirm_email.html
src/core/settings/: setting.py
src/core/web_socket/: ws_manager.py
src/core/web_socket/enum/: ws_type.py
src/database/migrations/: env.py
src/database/migrations/versions/: 069708c5fb85_table_users.py  b93dc09d2e0c_table_user_notifications.py
